K_clustering research initialized

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -170,36 +170,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since VADER is lexicon-based and misses some context, you can use Hugging Face’s DistilBERT for deep learning sentiment analysis."
+    "# K-MEANS Clustering and TF-IDF\n",
+    "\n",
+    "TF-IDF Vectorization:\n",
+    "Reviews are transformed into numerical features that capture the importance of words and phrases (including bigrams) while ignoring common stop words.\n",
+    "\n",
+    "K-Means Clustering:\n",
+    "The reviews are grouped into clusters. You can adjust num_clusters based on how many distinct topics/products you expect (for example, clusters might naturally emerge for \"chicken\", \"greasy food\", \"pasta\", etc.).\n",
+    "\n",
+    "Top Terms Extraction:\n",
+    "For each cluster, we sort the cluster center’s feature weights and print the top terms. These terms give insight into what the cluster is mainly discussing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/farhanmashrur/Desktop/cds/Project-Rest/venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "--- Cluster 0 ---\n",
+      "The burger was greasy and the fries were soggy.\n",
+      "The pizza was too greasy, but the crust was perfect.\n",
+      "Greasy food isn't my thing, especially when it's overcooked.\n",
+      "\n",
+      "Top terms in this cluster: ['greasy', 'crust', 'soggy', 'greasy crust', 'greasy fries', 'crust perfect', 'perfect', 'fries', 'pizza', 'pizza greasy']\n",
+      "\n",
+      "\n",
+      "--- Cluster 1 ---\n",
+      "Amazing grilled chicken salad with fresh veggies.\n",
+      "The fried chicken is superb, perfectly seasoned.\n",
+      "Loved the chicken wrap; it was light and full of flavor.\n",
+      "The deep-fried chicken was overly greasy and unappetizing.\n",
+      "\n",
+      "Top terms in this cluster: ['chicken', 'fried chicken', 'fried', 'superb perfectly', 'seasoned', 'perfectly seasoned', 'superb', 'perfectly', 'chicken superb', 'chicken wrap']\n",
+      "\n",
+      "\n",
+      "--- Cluster 2 ---\n",
+      "I love the crispy chicken wings and the spicy sauce.\n",
+      "Chicken tenders here are delicious and crispy.\n",
+      "I found the pasta a bit bland and the sauce too oily.\n",
+      "\n",
+      "Top terms in this cluster: ['crispy', 'sauce', 'tenders delicious', 'chicken tenders', 'tenders', 'delicious crispy', 'delicious', 'chicken', 'bit', 'bit bland']\n",
+      "\n",
+      "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Sample restaurant reviews focusing on product mentions\n",
+    "reviews = [\n",
+    "    \"I love the crispy chicken wings and the spicy sauce.\",\n",
+    "    \"The burger was greasy and the fries were soggy.\",\n",
+    "    \"Amazing grilled chicken salad with fresh veggies.\",\n",
+    "    \"The pizza was too greasy, but the crust was perfect.\",\n",
+    "    \"Chicken tenders here are delicious and crispy.\",\n",
+    "    \"I found the pasta a bit bland and the sauce too oily.\",\n",
+    "    \"The fried chicken is superb, perfectly seasoned.\",\n",
+    "    \"Greasy food isn't my thing, especially when it's overcooked.\",\n",
+    "    \"Loved the chicken wrap; it was light and full of flavor.\",\n",
+    "    \"The deep-fried chicken was overly greasy and unappetizing.\"\n",
+    "]\n",
+    "\n",
+    "# Step 1: Convert text to TF-IDF features\n",
+    "vectorizer = TfidfVectorizer(stop_words=\"english\", ngram_range=(1,2))\n",
+    "X = vectorizer.fit_transform(reviews)\n",
+    "\n",
+    "# Step 2: Apply K-Means clustering\n",
+    "num_clusters = 3  # Adjust as needed for your dataset\n",
+    "kmeans = KMeans(n_clusters=num_clusters, random_state=42)\n",
+    "clusters = kmeans.fit_predict(X)\n",
+    "\n",
+    "# Step 3: Output the reviews grouped by cluster and list top terms per cluster\n",
+    "terms = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "for i in range(num_clusters):\n",
+    "    print(f\"--- Cluster {i} ---\")\n",
+    "    cluster_reviews = [reviews[j] for j in range(len(reviews)) if clusters[j] == i]\n",
+    "    for review in cluster_reviews:\n",
+    "        print(review)\n",
+    "    \n",
+    "    # Identify top terms in the cluster\n",
+    "    # Note: We use the cluster centers to rank terms. They are in the TF-IDF space.\n",
+    "    order_centroids = kmeans.cluster_centers_[i].argsort()[::-1]\n",
+    "    top_terms = [terms[ind] for ind in order_centroids[:10]]\n",
+    "    print(\"\\nTop terms in this cluster:\", top_terms)\n",
+    "    print(\"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
