--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#RESEARCH"
+    "# RESEARCH"
    ]
   },
   {
@@ -18,35 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting nltk\n",
-      "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: click in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (1.4.2)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Downloading regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl.metadata (40 kB)\n",
-      "Requirement already satisfied: tqdm in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (4.66.5)\n",
-      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl (284 kB)\n",
-      "Installing collected packages: regex, nltk\n",
-      "Successfully installed nltk-3.9.1 regex-2024.11.6\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install nltk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,62 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: selenium in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (4.29.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
-      "Requirement already satisfied: trio~=0.17 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from selenium) (0.29.0)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from selenium) (0.12.1)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from selenium) (2024.8.30)\n",
-      "Requirement already satisfied: typing_extensions~=4.9 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from selenium) (4.12.2)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from selenium) (1.8.0)\n",
-      "Requirement already satisfied: attrs>=23.2.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio~=0.17->selenium) (24.2.0)\n",
-      "Requirement already satisfied: sortedcontainers in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: idna in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio~=0.17->selenium) (3.10)\n",
-      "Requirement already satisfied: outcome in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio~=0.17->selenium) (1.3.1)\n",
-      "Requirement already satisfied: wsproto>=0.14 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting webdriver_manager\n",
-      "  Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl.metadata (12 kB)\n",
-      "Requirement already satisfied: requests in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from webdriver_manager) (2.32.3)\n",
-      "Collecting python-dotenv (from webdriver_manager)\n",
-      "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-      "Requirement already satisfied: packaging in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from webdriver_manager) (24.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->webdriver_manager) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->webdriver_manager) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->webdriver_manager) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->webdriver_manager) (2024.8.30)\n",
-      "Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl (27 kB)\n",
-      "Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-      "Installing collected packages: python-dotenv, webdriver_manager\n",
-      "Successfully installed python-dotenv-1.0.1 webdriver_manager-4.0.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install selenium\n",
-    "%pip install webdriver_manager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SKYHIGH - Updated February 2025 - 1112 Photos & 333 Reviews - 1 N 19th St, Philadelphia, Pennsylvania - Bars - Restaurant Reviews - Phone Number - Yelp\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Webscraping\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Yelp - this works but my IP got blocked\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m By\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
      ]
     }
    ],
@@ -335,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
