--- a/research/nlp.ipynb
+++ b/research/nlp.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     "\n",
     "# Corresponding labels: 1 = Positive, 0 = Negative\n",
     "labels = [0, 1, 0, 0, 0, 0, 1, 0, 0, 1]\n",
-    "\n",
+    "    \n",
     "# Convert text to numerical vectors\n",
     "vectorizer = TfidfVectorizer()\n",
     "X = vectorizer.fit_transform(reviews).toarray()\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +128,12 @@
       "\n",
       "Review: The food was exceptional, and the staff was super friendly!\n",
       "Sentiment: Positive (Score: {'neg': 0.0, 'neu': 0.52, 'pos': 0.48, 'compound': 0.8122})\n",
+      "\n",
+      "Review: The pasta was cooked perfectly, but the service was extremely slow.\n",
+      "Sentiment: Positive (Score: {'neg': 0.0, 'neu': 0.794, 'pos': 0.206, 'compound': 0.3818})\n",
+      "\n",
+      "Review: The burger was greasy and the fries were soggy.\n",
+      "Sentiment: Negative (Score: {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0})\n",
       "\n"
      ]
     },
@@ -136,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /Users/farhanmashrur/nltk_data...\n",
+      "[nltk_data]     /Users/arsh/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     }
@@ -157,7 +163,9 @@
     "    \"Terrible experience. Food was late and tasted awful.\",\n",
     "    \"Morrison serves the best chicken sandwich in town!\",\n",
     "    \"The food was exceptional, and the staff was super friendly!\",\n",
-    "]\n",
+    "    \"The pasta was cooked perfectly, but the service was extremely slow.\", # Note the program didn't detect any negative sentiment in this review\n",
+    "    \"The burger was greasy and the fries were soggy.\", # Same here, no negative sentiment detected\n",
+    "] \n",
     "\n",
     "# Analyze Sentiment\n",
     "for review in reviews:\n",
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,11 +270,18 @@
     "    print(\"\\nTop terms in this cluster:\", top_terms)\n",
     "    print(\"\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "datastrategy",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
