--- a/research/nlp.ipynb
+++ b/research/nlp.ipynb
@@ -10,19 +10,111 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (1.5.2)\n",
+      "Collecting nltk\n",
+      "  Using cached nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (2.1.2)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
+      "Collecting click (from nltk)\n",
+      "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting regex>=2021.8.3 (from nltk)\n",
+      "  Downloading regex-2024.11.6-cp312-cp312-macosx_10_13_x86_64.whl.metadata (40 kB)\n",
+      "Collecting tqdm (from nltk)\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Using cached nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+      "Downloading regex-2024.11.6-cp312-cp312-macosx_10_13_x86_64.whl (288 kB)\n",
+      "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
+      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: tqdm, regex, click, nltk\n",
+      "Successfully installed click-8.1.8 nltk-3.9.1 regex-2024.11.6 tqdm-4.67.1\n",
+      "Collecting transformers\n",
+      "  Downloading transformers-4.49.0-py3-none-any.whl.metadata (44 kB)\n",
+      "Collecting torch\n",
+      "  Downloading torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl.metadata (25 kB)\n",
+      "Collecting filelock (from transformers)\n",
+      "  Downloading filelock-3.17.0-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting huggingface-hub<1.0,>=0.26.0 (from transformers)\n",
+      "  Downloading huggingface_hub-0.29.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: numpy>=1.17 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (2.1.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (24.1)\n",
+      "Collecting pyyaml>=5.1 (from transformers)\n",
+      "  Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (2024.11.6)\n",
+      "Collecting requests (from transformers)\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting tokenizers<0.22,>=0.21 (from transformers)\n",
+      "  Downloading tokenizers-0.21.0-cp39-abi3-macosx_10_12_x86_64.whl.metadata (6.7 kB)\n",
+      "Collecting safetensors>=0.4.1 (from transformers)\n",
+      "  Downloading safetensors-0.5.3-cp38-abi3-macosx_10_12_x86_64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from torch) (4.12.2)\n",
+      "Collecting sympy (from torch)\n",
+      "  Downloading sympy-1.13.3-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting networkx (from torch)\n",
+      "  Downloading networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Collecting jinja2 (from torch)\n",
+      "  Downloading jinja2-3.1.5-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting fsspec (from torch)\n",
+      "  Downloading fsspec-2025.2.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2->torch)\n",
+      "  Downloading MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl.metadata (4.0 kB)\n",
+      "Collecting charset-normalizer<4,>=2 (from requests->transformers)\n",
+      "  Downloading charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl.metadata (35 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests->transformers)\n",
+      "  Downloading idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests->transformers)\n",
+      "  Downloading urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests->transformers)\n",
+      "  Downloading certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting mpmath<1.4,>=1.1.0 (from sympy->torch)\n",
+      "  Downloading mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
+      "Downloading transformers-4.49.0-py3-none-any.whl (10.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m18.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl (150.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m150.8/150.8 MB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading huggingface_hub-0.29.1-py3-none-any.whl (468 kB)\n",
+      "Downloading fsspec-2025.2.0-py3-none-any.whl (184 kB)\n",
+      "Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl (183 kB)\n",
+      "Downloading safetensors-0.5.3-cp38-abi3-macosx_10_12_x86_64.whl (436 kB)\n",
+      "Downloading tokenizers-0.21.0-cp39-abi3-macosx_10_12_x86_64.whl (2.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading filelock-3.17.0-py3-none-any.whl (16 kB)\n",
+      "Downloading jinja2-3.1.5-py3-none-any.whl (134 kB)\n",
+      "Downloading networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "Downloading sympy-1.13.3-py3-none-any.whl (6.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m22.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
+      "Downloading charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl (196 kB)\n",
+      "Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Downloading MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl (14 kB)\n",
+      "Downloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m536.2/536.2 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
+      "Installing collected packages: mpmath, urllib3, sympy, safetensors, pyyaml, networkx, MarkupSafe, idna, fsspec, filelock, charset-normalizer, certifi, requests, jinja2, torch, huggingface-hub, tokenizers, transformers\n",
+      "Successfully installed MarkupSafe-3.0.2 certifi-2025.1.31 charset-normalizer-3.4.1 filelock-3.17.0 fsspec-2025.2.0 huggingface-hub-0.29.1 idna-3.10 jinja2-3.1.5 mpmath-1.3.0 networkx-3.4.2 pyyaml-6.0.2 requests-2.32.3 safetensors-0.5.3 sympy-1.13.3 tokenizers-0.21.0 torch-2.2.2 transformers-4.49.0 urllib3-2.3.0\n"
+     ]
+    }
+   ],
    "source": [
-    "Make sure you do\n",
-    "\n",
-    " **pip install scikit-learn nltk**\n",
-    "\n",
-    " **pip install transformers torch**\n"
+    "!pip install scikit-learn nltk\n",
+    "!pip install transformers torch\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,36 +206,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Review: Carve Cafe food is very bad in taste and greasy.\n",
-      "Sentiment: Negative (Score: {'neg': 0.296, 'neu': 0.704, 'pos': 0.0, 'compound': -0.5849})\n",
-      "\n",
-      "Review: Terrible experience. Food was late and tasted awful.\n",
-      "Sentiment: Negative (Score: {'neg': 0.504, 'neu': 0.496, 'pos': 0.0, 'compound': -0.7269})\n",
-      "\n",
-      "Review: Morrison serves the best chicken sandwich in town!\n",
-      "Sentiment: Positive (Score: {'neg': 0.0, 'neu': 0.609, 'pos': 0.391, 'compound': 0.6696})\n",
-      "\n",
-      "Review: The food was exceptional, and the staff was super friendly!\n",
-      "Sentiment: Positive (Score: {'neg': 0.0, 'neu': 0.52, 'pos': 0.48, 'compound': 0.8122})\n",
-      "\n",
-      "Review: The pasta was cooked perfectly, but the service was extremely slow.\n",
-      "Sentiment: Positive (Score: {'neg': 0.0, 'neu': 0.794, 'pos': 0.206, 'compound': 0.3818})\n",
-      "\n",
-      "Review: The burger was greasy and the fries were soggy.\n",
-      "Sentiment: Negative (Score: {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0})\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /Users/arsh/nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msentiment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentimentIntensityAnalyzer\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Download the required package\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
      ]
     }
    ],
@@ -281,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datastrategy",
+   "display_name": "datastrategy2",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
