--- a/research/nlp.ipynb
+++ b/research/nlp.ipynb
@@ -11,105 +11,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scikit-learn in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (1.5.2)\n",
-      "Collecting nltk\n",
-      "  Using cached nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (2.1.2)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
-      "Collecting click (from nltk)\n",
-      "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Downloading regex-2024.11.6-cp312-cp312-macosx_10_13_x86_64.whl.metadata (40 kB)\n",
-      "Collecting tqdm (from nltk)\n",
-      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Using cached nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
-      "Downloading regex-2024.11.6-cp312-cp312-macosx_10_13_x86_64.whl (288 kB)\n",
-      "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
-      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "Installing collected packages: tqdm, regex, click, nltk\n",
-      "Successfully installed click-8.1.8 nltk-3.9.1 regex-2024.11.6 tqdm-4.67.1\n",
+      "Requirement already satisfied: scikit-learn in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (1.6.1)\n",
+      "Requirement already satisfied: nltk in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (3.9.1)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from scikit-learn) (2.2.3)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from scikit-learn) (1.15.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: click in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (8.1.8)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (2024.11.6)\n",
+      "Requirement already satisfied: tqdm in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from nltk) (4.67.1)\n",
       "Collecting transformers\n",
       "  Downloading transformers-4.49.0-py3-none-any.whl.metadata (44 kB)\n",
       "Collecting torch\n",
-      "  Downloading torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl.metadata (25 kB)\n",
+      "  Downloading torch-2.6.0-cp311-none-macosx_11_0_arm64.whl.metadata (28 kB)\n",
       "Collecting filelock (from transformers)\n",
       "  Downloading filelock-3.17.0-py3-none-any.whl.metadata (2.9 kB)\n",
       "Collecting huggingface-hub<1.0,>=0.26.0 (from transformers)\n",
       "  Downloading huggingface_hub-0.29.1-py3-none-any.whl.metadata (13 kB)\n",
-      "Requirement already satisfied: numpy>=1.17 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (2.1.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (24.1)\n",
-      "Collecting pyyaml>=5.1 (from transformers)\n",
-      "  Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl.metadata (2.1 kB)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (2024.11.6)\n",
-      "Collecting requests (from transformers)\n",
-      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: numpy>=1.17 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (2.2.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (6.0.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (2024.11.6)\n",
+      "Requirement already satisfied: requests in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (2.32.3)\n",
       "Collecting tokenizers<0.22,>=0.21 (from transformers)\n",
-      "  Downloading tokenizers-0.21.0-cp39-abi3-macosx_10_12_x86_64.whl.metadata (6.7 kB)\n",
+      "  Using cached tokenizers-0.21.0-cp39-abi3-macosx_11_0_arm64.whl.metadata (6.7 kB)\n",
       "Collecting safetensors>=0.4.1 (from transformers)\n",
-      "  Downloading safetensors-0.5.3-cp38-abi3-macosx_10_12_x86_64.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from transformers) (4.67.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in /opt/anaconda3/envs/datastrategy2/lib/python3.12/site-packages (from torch) (4.12.2)\n",
-      "Collecting sympy (from torch)\n",
-      "  Downloading sympy-1.13.3-py3-none-any.whl.metadata (12 kB)\n",
+      "  Downloading safetensors-0.5.3-cp38-abi3-macosx_11_0_arm64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from transformers) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from torch) (4.12.2)\n",
       "Collecting networkx (from torch)\n",
       "  Downloading networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
-      "Collecting jinja2 (from torch)\n",
-      "  Downloading jinja2-3.1.5-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: jinja2 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from torch) (3.1.5)\n",
       "Collecting fsspec (from torch)\n",
       "  Downloading fsspec-2025.2.0-py3-none-any.whl.metadata (11 kB)\n",
-      "Collecting MarkupSafe>=2.0 (from jinja2->torch)\n",
-      "  Downloading MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl.metadata (4.0 kB)\n",
-      "Collecting charset-normalizer<4,>=2 (from requests->transformers)\n",
-      "  Downloading charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl.metadata (35 kB)\n",
-      "Collecting idna<4,>=2.5 (from requests->transformers)\n",
-      "  Downloading idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
-      "Collecting urllib3<3,>=1.21.1 (from requests->transformers)\n",
-      "  Downloading urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
-      "Collecting certifi>=2017.4.17 (from requests->transformers)\n",
-      "  Downloading certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting mpmath<1.4,>=1.1.0 (from sympy->torch)\n",
+      "Collecting sympy==1.13.1 (from torch)\n",
+      "  Downloading sympy-1.13.1-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting mpmath<1.4,>=1.1.0 (from sympy==1.13.1->torch)\n",
       "  Downloading mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from jinja2->torch) (3.0.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->transformers) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->transformers) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->transformers) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/envs/datastrategy/lib/python3.11/site-packages (from requests->transformers) (2025.1.31)\n",
       "Downloading transformers-4.49.0-py3-none-any.whl (10.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m18.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl (150.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m150.8/150.8 MB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m31.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading torch-2.6.0-cp311-none-macosx_11_0_arm64.whl (66.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.5/66.5 MB\u001b[0m \u001b[31m29.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading sympy-1.13.1-py3-none-any.whl (6.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m27.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25hDownloading huggingface_hub-0.29.1-py3-none-any.whl (468 kB)\n",
       "Downloading fsspec-2025.2.0-py3-none-any.whl (184 kB)\n",
-      "Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl (183 kB)\n",
-      "Downloading safetensors-0.5.3-cp38-abi3-macosx_10_12_x86_64.whl (436 kB)\n",
-      "Downloading tokenizers-0.21.0-cp39-abi3-macosx_10_12_x86_64.whl (2.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading filelock-3.17.0-py3-none-any.whl (16 kB)\n",
-      "Downloading jinja2-3.1.5-py3-none-any.whl (134 kB)\n",
+      "Downloading safetensors-0.5.3-cp38-abi3-macosx_11_0_arm64.whl (418 kB)\n",
+      "Using cached tokenizers-0.21.0-cp39-abi3-macosx_11_0_arm64.whl (2.6 MB)\n",
+      "Downloading filelock-3.17.0-py3-none-any.whl (16 kB)\n",
       "Downloading networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
-      "Downloading sympy-1.13.3-py3-none-any.whl (6.2 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m22.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
-      "Downloading charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl (196 kB)\n",
-      "Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
-      "Downloading MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl (14 kB)\n",
-      "Downloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m536.2/536.2 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
-      "Installing collected packages: mpmath, urllib3, sympy, safetensors, pyyaml, networkx, MarkupSafe, idna, fsspec, filelock, charset-normalizer, certifi, requests, jinja2, torch, huggingface-hub, tokenizers, transformers\n",
-      "Successfully installed MarkupSafe-3.0.2 certifi-2025.1.31 charset-normalizer-3.4.1 filelock-3.17.0 fsspec-2025.2.0 huggingface-hub-0.29.1 idna-3.10 jinja2-3.1.5 mpmath-1.3.0 networkx-3.4.2 pyyaml-6.0.2 requests-2.32.3 safetensors-0.5.3 sympy-1.13.3 tokenizers-0.21.0 torch-2.2.2 transformers-4.49.0 urllib3-2.3.0\n"
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m28.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m536.2/536.2 kB\u001b[0m \u001b[31m16.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: mpmath, sympy, safetensors, networkx, fsspec, filelock, torch, huggingface-hub, tokenizers, transformers\n",
+      "Successfully installed filelock-3.17.0 fsspec-2025.2.0 huggingface-hub-0.29.1 mpmath-1.3.0 networkx-3.4.2 safetensors-0.5.3 sympy-1.13.1 tokenizers-0.21.0 torch-2.6.0 transformers-4.49.0\n"
      ]
     }
    ],
    "source": [
     "!pip install scikit-learn nltk\n",
-    "!pip install transformers torch\n"
+    "!pip install transformers torch"
    ]
   },
   {
