added data, chagned nlp file, and added service key

--- a/research/googleNLP.ipynb
+++ b/research/googleNLP.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -268,23 +268,23 @@
     }
    ],
    "source": [
-    "# Plot the most common issues mentioned in reviews\n",
-    "issue_keywords = ['service', 'food', 'price', 'ambiance', 'cleanliness']\n",
-    "issue_counts = {keyword: 0 for keyword in issue_keywords}\n",
+    "# Plot the most common topics mentioned in reviews\n",
+    "topic_keywords = ['service', 'food', 'price', 'ambiance', 'cleanliness']\n",
+    "topic_counts = {keyword: 0 for keyword in topic_keywords}\n",
     "\n",
     "for review in sentiment_data:\n",
     "    review_text = review['review'].lower()\n",
-    "    for keyword in issue_keywords:\n",
+    "    for keyword in topic_keywords:\n",
     "        if keyword in review_text:\n",
-    "            issue_counts[keyword] += 1\n",
+    "            topic_counts[keyword] += 1\n",
     "\n",
-    "sorted_issues = sorted(issue_counts.items(), key=lambda x: x[1], reverse=True)\n",
-    "issue_names, issue_frequencies = zip(*sorted_issues)\n",
+    "sorted_topics = sorted(topic_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "topic_names, topic_frequencies = zip(*sorted_topics)\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
-    "plt.bar(issue_names, issue_frequencies, color='salmon')\n",
-    "plt.title('Most Common Issues Mentioned in Reviews')\n",
-    "plt.xlabel('Issue')\n",
+    "plt.bar(topic_names, topic_frequencies, color='salmon')\n",
+    "plt.title('Most Common Topics Mentioned in Reviews')\n",
+    "plt.xlabel('Topic')\n",
     "plt.ylabel('Frequency')\n",
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
