--- a/research/nlp.ipynb
+++ b/research/nlp.ipynb
@@ -324,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datastrategy2",
+   "display_name": "datastrategy",
    "language": "python",
    "name": "python3"
   },
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
