--- a/research/googleNLP.ipynb
+++ b/research/googleNLP.ipynb
@@ -254,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "rest",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
